[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/UI/Dialogs/ImageEffects/GradientDialog.gd" type="Script" id=1]

[node name="GradientDialog" type="ConfirmationDialog"]
margin_right = 200.0
margin_bottom = 196.0
window_title = "Gradient"
resizable = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Preview" type="TextureRect" parent="VBoxContainer"]
margin_right = 188.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
expand = true
stretch_mode = 6

[node name="ColorsContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 104.0
margin_right = 188.0
margin_bottom = 124.0

[node name="Label" type="Label" parent="VBoxContainer/ColorsContainer"]
margin_top = 3.0
margin_right = 44.0
margin_bottom = 17.0
text = "Colors:"

[node name="ColorPickerButton" type="ColorPickerButton" parent="VBoxContainer/ColorsContainer"]
margin_left = 48.0
margin_right = 68.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 0 )
mouse_default_cursor_shape = 2

[node name="ColorPickerButton2" type="ColorPickerButton" parent="VBoxContainer/ColorsContainer"]
margin_left = 72.0
margin_right = 92.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 0 )
mouse_default_cursor_shape = 2
color = Color( 1, 1, 1, 1 )

[node name="StepsContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 128.0
margin_right = 188.0
margin_bottom = 152.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/StepsContainer"]
margin_top = 5.0
margin_right = 39.0
margin_bottom = 19.0
text = "Steps:"

[node name="StepSpinBox" type="SpinBox" parent="VBoxContainer/StepsContainer"]
margin_left = 43.0
margin_right = 117.0
margin_bottom = 24.0
mouse_default_cursor_shape = 2
min_value = 2.0
value = 2.0

[node name="DirectionContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 156.0
margin_right = 188.0
margin_bottom = 176.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/DirectionContainer"]
margin_top = 3.0
margin_right = 63.0
margin_bottom = 17.0
text = "Direction:"

[node name="DirectionOptionButton" type="OptionButton" parent="VBoxContainer/DirectionContainer"]
margin_left = 67.0
margin_right = 188.0
margin_bottom = 20.0
mouse_default_cursor_shape = 2
text = "Top to Bottom"
items = [ "Top to Bottom", null, false, 0, null, "Bottom to Top", null, false, 1, null, "Left to Right", null, false, 2, null, "Right to Left", null, false, 3, null ]
selected = 0
[connection signal="about_to_show" from="." to="." method="_on_GradientDialog_about_to_show"]
[connection signal="confirmed" from="." to="." method="_on_GradientDialog_confirmed"]
[connection signal="popup_hide" from="." to="." method="_on_GradientDialog_popup_hide"]
[connection signal="color_changed" from="VBoxContainer/ColorsContainer/ColorPickerButton" to="." method="_on_ColorPickerButton_color_changed"]
[connection signal="color_changed" from="VBoxContainer/ColorsContainer/ColorPickerButton2" to="." method="_on_ColorPickerButton2_color_changed"]
[connection signal="value_changed" from="VBoxContainer/StepsContainer/StepSpinBox" to="." method="_on_StepSpinBox_value_changed"]
[connection signal="item_selected" from="VBoxContainer/DirectionContainer/DirectionOptionButton" to="." method="_on_OptionButton_item_selected"]
